--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+__pycache__/
+*.pyc
+*.bak
+*.swp
+.env
+*.sqlite3
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules/
+.env.*
+.cache/
+*.log
+.idea/
+.vscode/
+*.db
