Ignore local artifacts, backups, and Playwright outputs

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,103 @@
+# =============================================================================
+# FutureFunded — .gitignore (Production / SaaS / Playwright Hardened)
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Python
+# -----------------------------------------------------------------------------
 __pycache__/
-*.pyc
-*.bak
-*.swp
-.env
+*.py[cod]
+*.pyd
+*.pyo
+
+# Virtualenvs
+.venv/
+venv/
+ENV/
+env/
+
+# -----------------------------------------------------------------------------
+# Flask / App runtime
+# -----------------------------------------------------------------------------
+instance/
+app/data/*.db
+*.sqlite
 *.sqlite3
-.DS_Store
+
+# -----------------------------------------------------------------------------
+# Node / Frontend
+# -----------------------------------------------------------------------------
 node_modules/
+dist/
+build/
+
+# -----------------------------------------------------------------------------
+# Playwright (ALL artifacts)
+# -----------------------------------------------------------------------------
+test-results/
+playwright-report/
+.playwright/
+.trace/
+*.zip
+*.webm
+*.mp4
+*.har
+
+# -----------------------------------------------------------------------------
+# Test / CI artifacts
+# -----------------------------------------------------------------------------
+artifacts/
+.reports/
+out/
+tools/.artifacts/
+
+# -----------------------------------------------------------------------------
+# Images & media generated locally
+# -----------------------------------------------------------------------------
+*.png
+*.jpg
+*.jpeg
+*.webp
+*.gif
+*.avif
+
+# -----------------------------------------------------------------------------
+# Local backups / patch artifacts
+# -----------------------------------------------------------------------------
+*.bak
+*.bak.*
+*.BAK
+*.BAK.*
+*.fix*
+*.patch*
+*.orig
+
+# -----------------------------------------------------------------------------
+# Logs & temp files
+# -----------------------------------------------------------------------------
+*.log
+*.tmp
+*.temp
+
+# -----------------------------------------------------------------------------
+# Editor / OS noise
+# -----------------------------------------------------------------------------
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*:Zone.Identifier
+
+# -----------------------------------------------------------------------------
+# Coverage / reports
+# -----------------------------------------------------------------------------
+coverage/
+.nyc_output/
+htmlcov/
+
+# -----------------------------------------------------------------------------
+# Misc
+# -----------------------------------------------------------------------------
+.env
 .env.*
 .cache/
-*.log
-.idea/
-.vscode/
-*.db
