--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connectatx-fundraiser",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "FutureFunded flagship fundraiser platform with premium-ready, audit-first architecture.",
   "private": true,
   "type": "module",
@@ -9,70 +9,91 @@
   },
   "packageManager": "npm@10.0.0",
   "scripts": {
+    "//": "────────────────────────────────────────────────────────",
+    "//dev": "Dev",
     "dev": "cross-env FLASK_APP=app:create_app FLASK_ENV=development flask run --reload --debug",
     "serve": "npm run dev",
-    "format": "prettier --write app/static/css app/static/js",
-    "format:check": "prettier --check app/static/css app/static/js",
+    "//fmt": "Format (ship lane only)",
+    "format": "prettier --write \"app/static/css/ff.css\" \"app/static/js/ff-app.js\" \"tools/**/*.mjs\"",
+    "format:check": "prettier --check \"app/static/css/ff.css\" \"app/static/js/ff-app.js\" \"tools/**/*.mjs\"",
     "fmt": "npm run format",
     "fmt:check": "npm run format:check",
-    "lint:js": "eslint app/static/js --max-warnings=0",
-    "lint:css": "stylelint app/static/css --config stylelint.config.cjs --max-warnings=0",
+    "//lint": "Lint (ship lane only)",
+    "lint:js": "eslint \"app/static/js/ff*.{js,mjs}\" \"tools/**/*.mjs\" --max-warnings=0",
+    "lint:css": "stylelint \"app/static/css/ff.css\" --config stylelint.config.cjs --max-warnings=0",
     "lint:html": "node -e \"console.log('HTML lint skipped (Jinja runtime templates).')\"",
     "lint": "npm-run-all -p lint:js lint:css lint:html",
     "check": "npm-run-all fmt:check lint",
-    "health": "npm-run-all check audit:deps",
-    "audit:deps": "npm audit --audit-level=high || true",
-    "audit:a11y": "axe http://localhost:5000/ --exit 1",
-    "audit:lighthouse": "node scripts/ensure-cache.js && lighthouse http://localhost:5000/ --quiet --chrome-flags=\"--headless\" --only-categories=performance,accessibility,best-practices,seo --output=json --output-path=.cache/lh-report.json",
-    "audit:teams": "node scripts/ff-audit-teams.js",
-    "audit:all": "npm-run-all check audit:teams audit:a11y audit:lighthouse audit:deps",
-    "patch:teams": "node scripts/ff-patch-team-images.js",
-    "doctor": "npm-run-all audit:teams patch:teams",
-    "lh:desktop": "node scripts/ensure-cache.js && lighthouse http://localhost:5000/ --preset=desktop --chrome-flags=\"--headless --no-sandbox --disable-gpu\" --output=html --output-path=.cache/lh-desktop.html",
-    "lh:mobile": "node scripts/ensure-cache.js && lighthouse http://localhost:5000/ --preset=desktop --form-factor=mobile --screenEmulation.mobile --throttling-method=simulate --chrome-flags=\"--headless --no-sandbox --disable-gpu\" --output=html --output-path=.cache/lh-mobile.html",
-    "a11y": "pa11y http://localhost:5000",
-    "a11y:axe": "axe http://localhost:5000/ --exit 1",
-    "purge:css": "node -e \"console.log('PurgeCSS intentionally disabled (dynamic UI safe).')\"",
-    "clean": "rimraf .cache dist *.log",
-    "clean:hard": "rimraf node_modules package-lock.json .cache dist *.log",
-    "prepare": "husky",
-    "onboard": "node -e \"console.log('FutureFunded ready → npm run serve')\"",
-    "premium:verify": "node -e \"console.log('Premium mode verified: flags, Stripe, CSP, analytics.')\""
+    "//pw": "Playwright (use config to avoid 'No tests found')",
+    "test:ff:list": "npx playwright test -c tools/playwright.ff.config.mjs --list",
+    "test:ff": "cross-env BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs",
+    "test:ff:ui": "cross-env BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs --ui",
+    "test:ff:debug": "cross-env BASE_URL=http://127.0.0.1:5000 PWDEBUG=1 npx playwright test -c tools/playwright.ff.config.mjs",
+    "//pw-targets": "Targeted specs (paths are RELATIVE to testDir in config)",
+    "test:ff-app": "cross-env BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs ff_app_e2e.spec.mjs",
+    "test:ff:contract": "cross-env BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs ff_contract.spec.mjs",
+    "test:ff:checkout": "cross-env BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs ff_checkout_ux.spec.mjs",
+    "test:ff:payments": "cross-env BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs ff_payments.spec.mjs",
+    "test:ff:payments:strict": "cross-env STRICT_PAYMENTS=1 BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs ff_payments.spec.mjs",
+    "test:ff:all": "npm-run-all test:ff:contract test:ff:checkout test:ff:payments",
+    "test:ff:all:strict": "npm-run-all test:ff:contract test:ff:checkout test:ff:payments:strict",
+    "test:ff:perf": "cross-env BASE_URL=http://127.0.0.1:5000 npx playwright test -c tools/playwright.ff.config.mjs ff_perf_budget.spec.mjs",
+    "health:strict": "npm-run-all check test:ff:all:strict audit:a11y:axe audit:lighthouse audit:deps:prod",
+    "//audits": "Audits",
+    "audit:deps:prod": "npm audit --omit=dev --audit-level=high",
+    "audit:deps:dev": "npm audit --audit-level=high || true",
+    "audit:a11y:axe": "axe http://localhost:5000/ --exit 1",
+    "audit:lighthouse": "node scripts/ensure-cache.cjs && lighthouse http://localhost:5000/ --quiet --chrome-flags=\"--headless --no-sandbox --disable-gpu\" --only-categories=performance,accessibility,best-practices,seo --output=json --output-path=.cache/lh-report.json",
+    "//health": "CI / ship gates",
+    "health:fast": "npm-run-all check test:ff:contract test:ff:checkout",
+    "health": "npm-run-all check test:ff:all audit:a11y:axe audit:lighthouse audit:deps:prod",
+    "//clean": "Clean",
+    "clean": "rimraf .cache .playwright test-results playwright-report dist *.log",
+    "clean:hard": "rimraf node_modules package-lock.json .cache .playwright test-results playwright-report dist *.log",
+    "//hooks": "Git hooks / setup",
+    "prepare": "test -d .git && husky || true",
+    "postinstall": "npx playwright install chromium || true"
   },
   "devDependencies": {
     "@axe-core/cli": "^4.11.0",
-    "@eslint/js": "^9.39.2",
-    "@stylistic/eslint-plugin": "^2.13.0",
+    "@axe-core/playwright": "^4.11.1",
+    "@playwright/test": "^1.58.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.1",
     "eslint-formatter-unix": "^9.0.1",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "lighthouse": "^13.0.1",
+    "lighthouse": "^12.6.1",
     "lint-staged": "^15.5.2",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "^1.1.3",
     "pa11y": "^9.0.1",
+    "playwright": "^1.58.2",
     "postcss": "^8.5.6",
     "postcss-safe-parser": "^7.0.1",
     "postcss-selector-parser": "^7.1.1",
     "prettier": "^3.7.4",
     "prettier-plugin-jinja-template": "^1.3.2",
-    "rimraf": "^5.0.10",
+    "rimraf": "^6.1.3",
     "stylelint": "^16.26.1",
     "stylelint-config-recess-order": "^7.4.0",
     "stylelint-config-standard": "^39.0.1",
     "stylelint-order": "^7.0.1"
   },
   "lint-staged": {
-    "app/static/css/**/*": [
+    "app/static/css/ff.css": [
       "prettier --write"
     ],
-    "app/static/js/**/*": [
+    "app/static/js/ff-app.js": [
+      "prettier --write"
+    ],
+    "tools/**/*.mjs": [
       "prettier --write"
     ]
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^5.4.1",
-    "@stripe/stripe-js": "^8.6.4"
+    "@stripe/stripe-js": "^8.6.4",
+    "cheerio": "^1.2.0",
+    "minimist": "^1.2.8"
   }
 }
