Ship gates green: smoke+checkout pass; core assets locked; go-live prestige applied

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "scripts": {
     "dev": "cross-env FLASK_APP=app:create_app FLASK_ENV=development flask run --reload --debug",
     "serve": "npm run dev",
-    "format": "prettier --write app/static/css app/static/js",
-    "format:check": "prettier --check app/static/css app/static/js",
-    "fmt": "npm run format",
+    "format:check": "prettier --check app/templates/index.html app/static/css/ff.css app/static/js/ff-app.js",
+    "format:write": "prettier --write app/templates/index.html app/static/css/ff.css app/static/js/ff-app.js",
     "fmt:check": "npm run format:check",
+    "fmt:write": "npm run format:write",    
     "lint:js": "eslint app/static/js --max-warnings=0",
     "lint:css": "stylelint app/static/css --config stylelint.config.cjs --max-warnings=0",
     "lint:html": "node -e \"console.log('HTML lint skipped (Jinja runtime templates).')\"",
@@ -30,6 +30,8 @@
     "doctor": "npm-run-all audit:teams patch:teams",
     "lh:desktop": "node scripts/ensure-cache.js && lighthouse http://localhost:5000/ --preset=desktop --chrome-flags=\"--headless --no-sandbox --disable-gpu\" --output=html --output-path=.cache/lh-desktop.html",
     "lh:mobile": "node scripts/ensure-cache.js && lighthouse http://localhost:5000/ --preset=desktop --form-factor=mobile --screenEmulation.mobile --throttling-method=simulate --chrome-flags=\"--headless --no-sandbox --disable-gpu\" --output=html --output-path=.cache/lh-mobile.html",
+    "core:gate": "python tools/ff_core_gate.py",
+    "check:core": "npm run format:check && npm run core:gate",
     "a11y": "pa11y http://localhost:5000",
     "a11y:axe": "axe http://localhost:5000/ --exit 1",
     "purge:css": "node -e \"console.log('PurgeCSS intentionally disabled (dynamic UI safe).')\"",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@axe-core/cli": "^4.11.0",
     "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.58.2",
     "@stylistic/eslint-plugin": "^2.13.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.39.2",
