--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,13 @@
 {
-  "extends": ["stylelint-config-standard"],
-  "rules": {}
+  "extends": [
+    "stylelint-config-standard"
+  ],
+  "rules": {
+    "selector-class-pattern": null,
+    "selector-id-pattern": null,
+    "declaration-block-single-line-max-declarations": null,
+    "no-descending-specificity": null,
+    "property-no-deprecated": null,
+    "block-no-empty": null
+  }
 }
