--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "audit:prod": ".venv/bin/python tools/ff_no_slashsemi_gate.py && node tools/smoke_dom.js && .venv/bin/python tools/ff_hook_required_check.py --required tools/.artifacts/ff_required_hooks_v1.txt --js app/static/js/ff-app.js && npx eslint -c eslint.config.js app/static/js/ff-app.js --quiet && npx stylelint app/static/css/ff.css --config .stylelintrc.json && .venv/bin/python -m djlint app/templates/index.html --lint && npx playwright test --project=chromium tests/ff_prod_smoke_contract.spec.ts",
     "audit:fast": "node tools/smoke_dom.js && npx eslint -c eslint.config.js app/static/js/ff-app.js --quiet && npx stylelint app/static/css/ff.css --config .stylelintrc.json",
     "test:pw": "PLAYWRIGHT_BASE_URL=http://127.0.0.1:5000 npx playwright test --project=chromium --reporter=line",
-    "gate:smoke": "node tools/smoke_dom.js && npx playwright test --project=chromium tests/ff_prod_smoke_contract.spec.ts"
+    "gate:smoke": "node tools/smoke_dom.js && npx playwright test --project=chromium tests/ff_prod_smoke_contract.spec.ts",
+    "gate:full": "node tools/smoke_dom.js && npm run audit:prod && npx playwright test --project=chromium"
   },
   "devDependencies": {
     "@axe-core/cli": "^4.11.0",
@@ -62,7 +63,7 @@
     "postcss": "^8.5.6",
     "postcss-safe-parser": "^7.0.1",
     "postcss-selector-parser": "^7.1.1",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.1",
     "prettier-plugin-jinja-template": "^1.3.2",
     "rimraf": "^5.0.10",
     "stylelint": "^16.26.1",
